# github-bot

./: Cargo.toml
.github/workflows/: notify-telegram.yml  push-notify.yml
src/: main.rs
